[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-openssl = { version = "*", optional = true }
openssl = { version = "*", optional = true }
structopt = "*"
httparse = "*"
rcgen = { version = "*", optional = true }
tempfile = "*"
anyhow = { version = "*", features = ["backtrace"] }

[features]
ssl = [
	"dep:tokio-openssl",
	"dep:openssl",
	"dep:rcgen",
]
