[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
httparse = "*"
rcgen = { version = "*", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
tempfile = "*"
anyhow = { version = "*", features = ["backtrace"] }
clap = { version = "4.5.40", features = ["derive"] }
tokio-native-tls = "0.3.1"
